# bonney_et_al_data_2025

./: .gitignore  CITATION.cff  MSD-README.md  README.md  filter_basin_combinations.txt  pyproject.toml  workflow.sh  workflow.slurm
containers/: wrap.def
tests/: conftest.py
tests/hmm/: test_disaggregation.py
tests/regression/: _helpers.py  _paths.py  conftest.py  test_from_hmm.py  test_from_netcdf.py
tests/regression/baseline/: .gitignore
toolkit/: __init__.py
toolkit/data/: filter.py  io.py  metadata.py  ninetyfiveofive.py
toolkit/emulator/: dataset.py
toolkit/graphics/: basin.py  hmm.py  model.py  palette.py  plot.py
toolkit/hmm/: disaggregation.py  model.py  utils.py
toolkit/utils/: disaggregation.py  random_seeds.py
toolkit/wrap/: eva.py  execution_slot.py  io.py  processing.py  wrapdata.py  wrapdriver.py  wraputils.py
workflow/: MSD-README.md  MSD-README_wrap-vars.md
workflow/III_WRAP_Execution/: assign_reservoir_anchors.py  explore_reservoir_eva.py  i_execute_wrap.py  ii_process_diversions_reservoirs.py  iii_validate_dataset.py
workflow/II_HMM_Streamflow_Generation/: README.md  i_train_hmm_models.py  ii_generate_synthetic_streamflow.py  iii_explore_streamflow.py
workflow/IV_Finalize_Dataset/: i_validate_dataset.py  ii_optimize_and_finalize.py
workflow/I_9505_Data_Preparation/: i_download_data.py  ii_associate_pcp_and_reaches.py  iii_subset_data_to_reaches.py  iv_combine_nc_files_and_convert_units.py
