[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolkit"
description = "Supporting functions for repository analysis"
readme = "README.md"
version = "0.0.1"
authors = [
  { name = "Kirk Bonney", email = "klbonne@sandia.gov" },
]
maintainers = [
  { name = "Kirk Bonney", email = "klbonne@sandia.gov" },
]
requires-python = ">=3.8"

dependencies = [
      "numpy", 
      "pandas",
      "xarray",
      "matplotlib",
      "seaborn",
      "h5py",
      "hmmlearn",
      "optuna",
      "pyyaml",
      "pytensor",
      "pymc",
      "arviz",
      "scipy",
      "pysal",
      "esda",
    ]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
